third_party/move/move-compiler-v2/tests/unit_test/test/expected_failure_not_test.exp

Diagnostics:
error: Only functions defined as a test with #[test] can also have an #[expected_failure] attribute
  ┌─ tests/unit_test/test/expected_failure_not_test.move:4:9
  │
3 │     #[expected_failure]
  │       ---------------- Attributed as #[expected_failure] here
4 │     fun foo() { }
  │         ^^^

error: Only functions defined as a test with #[test] can also have an #[expected_failure] attribute
  ┌─ tests/unit_test/test/expected_failure_not_test.move:7:9
  │
6 │     #[test_only, expected_failure]
  │                  ---------------- Attributed as #[expected_failure] here
7 │     fun bar() { }
  │         ^^^
